2019-06-16 0.8.7 indev
Inital implementation of the device properties API.

Added new interfaces to qmpMidiOutDevice.
Implemented the new interfaces for qmpMidiOutFluid.
Initial infra for device initialization file parsing.
Move to the new interfaces for getting list of presets.
Use DevIL instead of CxImage.

External output devices are broken now but that is for
another commit.

2019-05-26 0.8.7 indev
New flag field in SEvent.
Further type usage corrections.
Removed all references to ICallback in official plugins.

2019-05-25 0.8.7 indev
Massive code refactor en cours!
Less complain from compilers:
 - use nullptr instead of NULL
 - use types for event fields
 - explicit type casting added
Stop saving parameters of meta events in p1/p2 fields of SEvent.
SEventCallBackData removed. Use SEvent instead.
callback_t now uses std::function, deprecating ICallback.

2019-04-22 0.8.7 indev
New development cycle!
Partially reintroduce High DPI handling.
Pressing enter when a preset is focused now opens the preset selection dialog.
Close all functionality windows before shutting down.
And the most important one of them all: new simple visualization!

2019-03-18 0.8.6 alpha
Fixed initial preset selection in XG mode.

2019-03-13 0.8.6 alpha
Set preset bank correctly in XG mode.
Removed High DPI handling code. Good luck to Windows users out there.
Skulpture style: dials are no longer blurred if scaled.

2019-01-25 0.8.6 alpha
Fixed a crash caused by improper preset probing.
Further ensure CC#8 is initialized correctly.
Minor string table update.

2019-01-24 0.8.6 alpha
Migrated to fluidsynth 2.x.
Moved to mxe for Windows build.
Fixed default value for CC#8.

2018-10-02 0.8.6 alpha
Fixed layout with Qt 5.11.
Minor code cleanups in qmpchannelswindow.
Documentation update.

2018-06-18 0.8.6 alpha
Precise playback (no more slowdown).
Also the visualization should now sync better.

2018-03-19 0.8.6 alpha
Unified meta event reading code.
Fixed playlist dialog behaving oddly.
