@@ -23,6 +23,7 @@ class qmpMidiOutRtMidi:public qmpMidiOutDevice
 private:
 	unsigned portid;
 	RtMidiOut* outport;
+	qmpDeviceInitializer* devinit;
 public:
 	qmpMidiOutRtMidi(unsigned _portid);
 	~qmpMidiOutRtMidi();
@@ -37,10 +38,12 @@ public:
 	void onMapped(uint8_t ch,int refcnt);
 	void onUnmapped(uint8_t ch,int refcnt);
 	std::vector<std::pair<uint16_t,std::string>> getBankList();
-	std::vector<std::pair<uint8_t,std::string>> getPresets(int bank);
+	std::vector<std::pair<uint8_t,std::string>> getPresets(uint16_t bank);
 	std::string getPresetName(uint16_t bank,uint8_t preset);
 	bool getChannelPreset(int ch,uint16_t *bank,uint8_t *preset,std::string &presetname);
 	uint8_t getInitialCCValue(uint8_t cc);
+
+	void setInitializerFile(const char* path);
 };
 class qmpRtMidiManager
 {
